@@ -300,8 +300,9 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,18,91,10
     CONTROL         "Ball Trails/Motion Blur",IDC_GLOBAL_TRAIL_CHECK,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,162,31,91,10
     CONTROL         "Enable 3D Stereo",IDC_3D_STEREO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,266,18,70,10
-    CONTROL         "Antialias 3D",IDC_3D_STEREO_AA,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,266,31,70,10
-    CONTROL         "Use Y-Axis for 3D",IDC_3D_STEREO_Y,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,266,44,70,10
+    CONTROL         "Use Y-Axis for 3D",IDC_3D_STEREO_Y,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,266,31,70,10
+	LTEXT           "Offset", IDC_STATIC, 266, 47, 50, 10
+	EDITTEXT        IDC_3D_STEREO_OFS, 304, 45, 36, 12, ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "Separation",IDC_STATIC,266,60,50,10
     EDITTEXT        IDC_3D_STEREO_MS,304,58,36,12,ES_RIGHT | ES_AUTOHSCROLL
     LTEXT           "ZPD",IDC_STATIC,266,73,50,10
@@ -1468,13 +1469,15 @@ BEGIN
     PUSHBUTTON      "Import Physics Set (incl. Flippers)",IDC_IMPORT_PHYSICS_BUTTON,7,177,110,14
     PUSHBUTTON      "Export Physics Set (incl. Flippers)",IDC_EXPORT_PHYSICS_BUTTON,7,192,110,14
     LTEXT           "- - -",IDC_STATIC,7,209,113,8
-    CONTROL         "Enable EM Reels",13432,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,219,104,10
-    CONTROL         "Enable Decals",13433,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,231,105,10
-    EDITTEXT        1041,80,243,40,12,ES_AUTOHSCROLL
+    CONTROL         "Enable EMReels",13432,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,219,104,10
+    CONTROL         "Enable Decals",13433,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,69,219,104,10
+	EDITTEXT        1045, 80, 229, 40, 12, ES_AUTOHSCROLL
+	LTEXT           "3D Stereo Offset", IDC_STATIC, 7, 231, 70, 8
+	EDITTEXT        1041, 80, 243, 40, 12, ES_AUTOHSCROLL
     LTEXT           "3D Stereo Separation",IDC_STATIC,7,245,70,8
     EDITTEXT        1042,80,257,40,12,ES_AUTOHSCROLL
     LTEXT           "3D Stereo ZPD",IDC_STATIC,7,259,70,8
-    CONTROL         "Overwrite Global Settings",IDC_GLOBAL_3DSTEREO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,272,98,8
+    CONTROL         "Overwrite Global Stereo Settings",IDC_GLOBAL_3DSTEREO,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,272,110,8
 END
 
 IDD_PROPPOINT_POSITION DIALOGEX 0, 0, 125, 42
